<resources>
    <string name="build_number">20080722-0001</string>
    <string name="meeting_invitation" />
    <string name="account_setup_failed_security_policies_required" />
    <string name="account_settings_add_account_label" />
    <string name="account_setup_basics_instructions" />
    <string name="accounts_context_menu_title" />
    <string name="add_contact_dlg_message_fmt" />
    <string name="add_contact_dlg_title" />
    <string name="read_attachment_label">read Email attachments</string>
    <string name="read_attachment_desc">Allows this application to read your Email attachments</string>
    <string name="permission_access_provider_label">Access email provider data</string>
    <string name="permission_access_provider_desc">Allows application to access email database including received messages, sent messages, user names, and passwords</string>
    <string name="app_name">Email</string>
    <string name="accounts_title">Email</string>
    <string name="compose_title">Compose</string>
    <string name="debug_title">Debug</string>
    <string name="next_action">Next</string>
    <string name="okay_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="send_action">Send</string>
    <string name="reply_action">Reply</string>
    <string name="reply_all_action">Reply all</string>
    <string name="delete_action">Delete</string>
    <string name="forward_action">Forward</string>
    <string name="done_action">Done</string>
    <string name="discard_action">Discard</string>
    <string name="save_draft_action">Save as draft</string>
    <string name="read_unread_action">Read/Unread</string>
    <string name="read_action">Mark as read</string>
    <string name="unread_action">Mark as unread</string>
    <string name="favorite_action">Favorites</string>
    <string name="set_star_action">Add star</string>
    <string name="remove_star_action">Remove star</string>
    <string name="refresh_action">Refresh</string>
    <string name="add_account_action">Add account</string>
    <string name="deselect_all_action">Unselect all</string>
    <string name="compose_action">Compose</string>
    <string name="search_action">Search</string>
    <string name="open_action">Open</string>
    <string name="account_settings_action">Account settings</string>
    <string name="remove_account_action">Remove account</string>
    <string name="folders_action">Folders</string>
    <string name="accounts_action">Accounts</string>
    <string name="mark_as_read_action">Mark as read</string>
    <string name="mark_as_unread_action">Mark as unread</string>
    <string name="add_cc_bcc_action">Add Cc/Bcc</string>
    <string name="add_attachment_action">Attach</string>
    <string name="dump_settings_action">Dump settings</string>
    <string name="choose_attachment_dialog_title">Select attachment</string>
    <string name="status_loading_more">Loading messages...</string>
    <string name="status_sending_messages">Sending messages...</string>
    <string name="status_network_error">Connection error</string>
    <string name="status_sending_messages_failed">Retry sending messages</string>
    <string name="status_loading_more_failed">Retry loading more messages</string>
    <string name="notification_new_title">New email</string>
    <string name="error_loading_message_body">Unable to load message. Message too long</string>
    <string name="mailbox_name_server_inbox">Inbox</string>
    <string name="mailbox_name_server_outbox">Outbox</string>
    <string name="mailbox_name_server_drafts">Drafts</string>
    <string name="mailbox_name_server_trash">Trash</string>
    <string name="mailbox_name_server_sent">Sent</string>
    <string name="mailbox_name_server_junk">Junk</string>
    <string name="mailbox_name_display_inbox">Inbox</string>
    <string name="mailbox_name_display_outbox">Outbox</string>
    <string name="mailbox_name_display_drafts">Drafts</string>
    <string name="mailbox_name_display_trash">Trash</string>
    <string name="mailbox_name_display_sent">Sent</string>
    <string name="mailbox_name_display_junk">Junk</string>
    <string name="debug_version_fmt">Version: %s</string>
    <string name="debug_enable_debug_logging_label">Enable extra debug logging?</string>
    <string name="debug_enable_sensitive_logging_label">Enable sensitive information debug logging? (May show passwords in logs.)</string>
    <string name="debug_enable_exchange_logging_label">Enable exchange parser logging? (Extremely verbose)</string>
    <string name="debug_enable_exchange_file_logging_label">Enable exchange sd card logging?</string>
    <string name="account_folder_list_separator_accounts">Accounts</string>
    <string name="account_folder_list_summary_inbox">Combined inbox</string>
    <string name="account_folder_list_summary_unread">Unread</string>
    <string name="account_folder_list_summary_starred">Starred</string>
    <string name="account_folder_list_summary_drafts">Drafts</string>
    <string name="account_folder_list_summary_outbox">Outbox</string>
    <string name="account_folder_list_refresh_toast">Please longpress an account to refresh it</string>
    <string name="mailbox_list_title">Mailbox</string>
    <string name="message_list_load_more_messages_action">Load more messages</string>
    <string name="message_list_send_pending_messages_action">Send outgoing messages</string>
    <string name="message_list_title">%s: %s</string>
    <string name="message_compose_to_hint">To</string>
    <string name="message_compose_cc_hint">Cc</string>
    <string name="message_compose_bcc_hint">Bcc</string>
    <string name="message_compose_subject_hint">Subject</string>
    <string name="message_compose_body_hint">Compose email</string>
    <string name="message_compose_fwd_header_fmt">\n\n-------- Original message --------\nSubject: %1$s\nFrom: %2$s\nTo: %3$s\nCC: %4$s\n\n</string>
    <string name="message_compose_reply_header_fmt">\n\n%s wrote:\n\n</string>
    <string name="message_compose_quoted_text_label">Original message</string>
    <string name="message_compose_error_no_recipients">Add recipients</string>
    <string name="message_compose_error_invalid_email">Invalid email addresses</string>
    <string name="message_compose_attachments_skipped_toast">Some attachments cannot be forwarded because they have not downloaded</string>
    <string name="message_compose_attachment_size">Unable to attach file. File size too large</string>
    <string name="message_compose_display_name">%1$s and %2$d others</string>
    <string name="message_compose_discard_dialog">Message not sent. Discard?</string>
    <string name="message_view_to_label">To:</string>
    <string name="message_view_cc_label">Cc:</string>
    <string name="message_view_attachment_view_action">Open</string>
    <string name="message_view_attachment_download_action">Save</string>
    <string name="message_view_status_attachment_saved">Saved to SD card as %s.</string>
    <string name="message_view_status_attachment_not_saved">Unable to save attachment to SD card</string>
    <string name="message_view_show_pictures_instructions">Select \"Show pictures\" to display embedded pictures</string>
    <string name="message_view_show_pictures_action">Show pictures</string>
    <string name="message_view_fetching_attachment_toast">Fetching attachment</string>
    <string name="message_view_fetching_attachment_progress">Fetching attachment %s</string>
    <string name="message_view_invite_view">View in Calendar »</string>
    <string name="message_view_invite_title">Calendar Invite</string>
    <string name="message_view_invite_text">Going?</string>
    <string name="message_view_invite_toast_yes">Invitation accepted</string>
    <string name="message_view_invite_toast_maybe">Invitation tentatively accepted</string>
    <string name="message_view_invite_toast_no">Invitation declined</string>
    <string name="message_deleted_toast">Message deleted</string>
    <string name="message_discarded_toast">Message deleted</string>
    <string name="message_discarded_toast_EAS">Deleting...</string>
    <string name="message_saved_toast">Message saved as draft</string>
    <string name="message_view_display_attachment_toast">This attachment cannot be displayed</string>
    <string name="message_view_reply_to_sender">Sender</string>
    <string name="message_view_reply_to_all">All</string>
    <string name="message_view_forward_to_new">New recipients</string>
    <string name="message_view_forward_to_old">Existing recipients</string>
    <string name="account_setup_basics_title">Set up email</string>
    <string name="accounts_welcome">Username should be same as left side of @ on email address</string>
    <string name="accounts_welcome_exchange">Configure exchange account in a few steps</string>
    <string name="account_setup_basics_email_hint">Email address</string>
    <string name="account_setup_basics_password_hint">Password</string>
    <string name="account_setup_basics_password_hint_ex">********</string>
    <string name="account_setup_basics_default_label">Send email from this account by default</string>
    <string name="account_setup_basics_manual_setup_action">Manual setup</string>
    <string name="account_setup_username_password_toast">Enter valid email address and password</string>
    <string name="account_duplicate_dlg_title">Duplicated account</string>
    <string name="account_setup_check_settings_title" />
    <string name="account_setup_check_settings_retr_info_msg">Retrieving account information...</string>
    <string name="account_setup_check_settings_check_incoming_msg">Checking incoming server settings...</string>
    <string name="account_setup_check_settings_check_outgoing_msg">Checking outgoing server settings...</string>
    <string name="account_setup_check_settings_canceling_msg">Cancelling...</string>
    <string name="account_setup_names_title">Set up email</string>
    <string name="account_setup_names_instructions">Your account is set up, and email is on its way!</string>
    <string name="account_setup_names_account_name_label">Give this account a name (Optional)</string>
    <string name="account_setup_names_user_name_label">Your name (Displayed on outgoing messages)</string>
    <string name="account_setup_account_type_title">Add email account</string>
    <string name="account_setup_account_type_instructions">What type of account?</string>
    <string name="account_setup_account_type_pop_action">POP3 account</string>
    <string name="account_setup_account_type_imap_action">IMAP account</string>
    <string name="account_setup_account_type_exchange_action">Microsoft Exchange ActiveSync</string>
    <string name="account_setup_account_type_exchange_action_alternate">Microsoft Exchange ActiveSync</string>
    <string name="account_setup_incoming_title">Incoming server settings</string>
    <string name="account_setup_incoming_username_label">User name</string>
    <string name="account_setup_incoming_password_label">Password</string>
    <string name="account_setup_incoming_pop_server_label">POP3 server</string>
    <string name="account_setup_incoming_imap_server_label">IMAP server</string>
    <string name="account_setup_incoming_port_label">Port</string>
    <string name="account_setup_incoming_security_label">Security type</string>
    <string name="account_setup_incoming_security_none_label">None</string>
    <string name="gal_search_str">Search</string>
    <string name="click_for_more">More search</string>
    <string name="message_compose_cc_bcc_hint">Cc/Bcc</string>
    <string name="recent_action">Recent</string>
    <string name="select_action">Add</string>
    <string name="phonebook_action">Contacts</string>
    <string name="group_action">Group</string>
    <string name="account_setup_basics_email_hint_ex">Enter email address. Ex) account@example.com</string>
    <string name="message_composer_to_label">From:</string>
</resources>