<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:paddingBottom="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textSize="24.0px" android:gravity="center" android:id="@id/recent" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/recent_action" android:layout_weight="25.0" />
        <Button android:textSize="24.0px" android:gravity="center" android:id="@id/phonebook" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/phonebook_action" android:layout_weight="25.0" />
        <Button android:textSize="24.0px" android:gravity="center" android:id="@id/group" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/group_action" android:layout_weight="25.0" />
        <Button android:textSize="24.0px" android:gravity="center" android:id="@id/gal_search_button" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/gal_search_str" android:layout_weight="25.0" />
    </LinearLayout>
</LinearLayout>