<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:scrollbarStyle="outsideInset" android:layout_width="fill_parent" android:layout_height="0.0dip" android:fillViewport="true" android:layout_weight="1.0">
        <ListView android:id="@android:id/list" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </ScrollView>
    <com.sec.android.touchwiz.widget.TwSoftkeyView android:id="@id/softkeyview" android:layout_width="fill_parent" android:layout_height="57.0dip"
      xmlns:touchwiz="http://schemas.android.com/apk/res/touchwiz">
        <com.sec.android.touchwiz.widget.TwSoftkeyItem android:id="@id/gal_confirm_button" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentRight="true" touchwiz:twSoftkeyItemType="text" touchwiz:twSoftkeyItemText="@string/select_action" />
        <com.sec.android.touchwiz.widget.TwSoftkeyItem android:id="@id/gal_more_button" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentRight="true" touchwiz:twSoftkeyItemType="text" touchwiz:twSoftkeyItemText="@string/click_for_more" />
        <com.sec.android.touchwiz.widget.TwSoftkeyItem android:id="@id/tw_cancel" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentRight="true" touchwiz:twSoftkeyItemType="text" touchwiz:twSoftkeyItemText="@string/cancel_action" />
    </com.sec.android.touchwiz.widget.TwSoftkeyView>
</LinearLayout>