<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:scrollbarStyle="outsideOverlay" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/from_layout" android:background="@drawable/email_address_header" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <TextView android:textAppearance="@touchwiz:style/TwTextAppearanceGroupTitle" android:gravity="left|center" android:id="@id/from_title" android:paddingLeft="6.0dip" android:layout_width="wrap_content" android:layout_height="30.0dip" android:text="@string/message_composer_to_label" android:lines="1" android:shadowColor="@touchwiz:color/tw_color002" android:shadowDx="-1.0" android:shadowDy="-1.0" android:shadowRadius="1.0" />
                        <Button android:textColor="#ffffffff" android:ellipsize="end" android:gravity="left|center" android:id="@id/from_button" android:background="@drawable/btn_account_background" android:paddingLeft="10.0dip" android:paddingTop="2.0dip" android:paddingRight="10.0dip" android:paddingBottom="2.0dip" android:layout_width="wrap_content" android:layout_height="28.0dip" android:layout_margin="2.0dip" android:singleLine="true" />
                    </LinearLayout>
                    <Spinner android:ellipsize="end" android:id="@id/from" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="-15.0dip" android:drawSelectorOnTop="true" android:prompt="@string/message_composer_to_label" android:layout_weight="1.0" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:id="@id/header" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="4.0dip">
                    <com.android.email.activity.AddressTextView android:textAppearance="?android:textAppearanceMedium" android:textSize="28.0px" android:textColor="?android:textColorSecondaryInverse" android:id="@id/to" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:layout_marginTop="0.0px" android:layout_marginRight="2.0dip" android:hint="@string/message_compose_to_hint" android:maxLength="100000" android:inputType="textMultiLine|textEmailAddress" android:imeOptions="actionNext" />
                    <com.android.email.activity.AddressTextView android:textAppearance="?android:textAppearanceMedium" android:textSize="28.0px" android:textColor="?android:textColorSecondaryInverse" android:id="@id/cc_bcc" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:layout_marginRight="2.0dip" android:hint="@string/message_compose_cc_bcc_hint" android:cursorVisible="false" android:editable="false" android:inputType="none" android:imeOptions="actionNext" />
                    <com.android.email.activity.AddressTextView android:textAppearance="?android:textAppearanceMedium" android:textSize="28.0px" android:textColor="?android:textColorSecondaryInverse" android:id="@id/cc" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:layout_marginRight="2.0dip" android:hint="@string/message_compose_cc_hint" android:maxLength="100000" android:inputType="textMultiLine|textEmailAddress" android:imeOptions="actionNext" />
                    <com.android.email.activity.AddressTextView android:textAppearance="?android:textAppearanceMedium" android:textSize="28.0px" android:textColor="?android:textColorSecondaryInverse" android:id="@id/bcc" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:layout_marginRight="2.0dip" android:hint="@string/message_compose_bcc_hint" android:maxLength="100000" android:inputType="textMultiLine|textEmailAddress" android:imeOptions="actionNext" />
                    <EditText android:textAppearance="?android:textAppearanceMedium" android:textSize="28.0px" android:textColor="?android:textColorSecondaryInverse" android:id="@id/subject" android:nextFocusDown="@id/message_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:layout_marginRight="2.0dip" android:hint="@string/message_compose_subject_hint" android:maxLength="256" android:inputType="textEmailSubject|textCapSentences|textAutoCorrect|textImeMultiLine" android:imeOptions="actionNext" />
                    <LinearLayout android:id="@id/attachments_header" android:background="@drawable/attachment_field_background" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="41.0dip" android:layout_marginLeft="4.0dip" android:layout_marginTop="1.0dip" android:layout_marginRight="4.0dip" android:layout_marginBottom="5.0dip">
                        <ImageView android:id="@id/ImageView01" android:layout_width="40.0dip" android:layout_height="wrap_content" android:layout_marginLeft="1.0dip" android:layout_marginTop="3.0dip" android:src="@drawable/ic_email_attachment_small" />
                        <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="?android:textColorSecondaryInverse" android:id="@id/attachments_header_info" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginTop="2.0dip" android:layout_weight="1.0" />
                    </LinearLayout>
                    <LinearLayout android:orientation="vertical" android:id="@id/attachments" android:paddingLeft="4.0dip" android:paddingRight="4.0dip" android:paddingBottom="5.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                    <View android:layout_width="fill_parent" android:layout_height="1.0dip" />
                </LinearLayout>
                <EditText android:textAppearance="?android:textAppearanceMedium" android:textSize="28.0px" android:textColor="?android:textColorSecondaryInverse" android:gravity="top|left|center" android:id="@id/message_content" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="6.0dip" android:layout_marginRight="6.0dip" android:hint="@string/message_compose_body_hint" android:minLines="3" android:maxLength="300000" android:layout_weight="1.0" android:inputType="textCapSentences|textAutoCorrect|textMultiLine" android:imeOptions="actionDone|flagNoEnterAction" />
                <LinearLayout android:orientation="horizontal" android:id="@id/quoted_text_bar" android:background="@drawable/email_quoted_bar" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginLeft="3.0dip" android:layout_marginRight="3.0dip">
                    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
                        <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="?android:textColorSecondaryInverse" android:id="@id/quoted_text_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/message_compose_quoted_text_label" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                    </LinearLayout>
                    <ImageButton android:layout_gravity="center_vertical" android:id="@id/quoted_text_delete" android:background="@drawable/btn_circle" android:layout_width="52.0px" android:layout_height="72.0px" android:src="@drawable/btn_minus" android:layout_alignLeft="@id/quoted_text_title" android:layout_alignParentRight="true" />
                </LinearLayout>
                <WebView android:id="@id/quoted_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="9.0dip" android:layout_marginRight="9.0dip" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <com.sec.android.touchwiz.widget.TwSoftkeyView android:id="@id/softkeyview" android:layout_width="fill_parent" android:layout_height="57.0dip"
      xmlns:touchwiz="http://schemas.android.com/apk/res/touchwiz">
        <com.android.email.EmailTwSoftkeyItem android:id="@id/send" android:layout_width="fill_parent" android:layout_height="fill_parent" email:itemText="@string/send_action"
          xmlns:email="http://schemas.android.com/apk/res/com.android.email" />
        <com.android.email.EmailTwSoftkeyItem android:id="@id/add_attachment" android:layout_width="fill_parent" android:layout_height="fill_parent" email:itemText="@string/add_attachment_action"
          xmlns:email="http://schemas.android.com/apk/res/com.android.email" />
        <com.android.email.EmailTwSoftkeyItem android:id="@id/discard" android:layout_width="fill_parent" android:layout_height="fill_parent" email:itemText="@string/discard_action"
          xmlns:email="http://schemas.android.com/apk/res/com.android.email" />
    </com.sec.android.touchwiz.widget.TwSoftkeyView>
</LinearLayout>